change header height to min-height (fixes text clipping)

--- a/css/main.scss
+++ b/css/main.scss
@@ -206,7 +206,7 @@ section {
 }
 
 header {
-	height: 130vh;
+	min-height: 130vh;
 	position: relative;
 }
 
